--- a/nodes/SOURCE-DAILY_14_TOTAL_SHORT.yml
+++ b/nodes/SOURCE-DAILY_14_TOTAL_SHORT.yml
@@ -1,48 +1,50 @@
-steps:
-  DAILY_14_TOTAL_SHORT-f821068d-2693-489e-a4b5-f15f660375eb:
-    operation:
-      database: ""
-      dataset: ""
-      deployEnabled: true
-      description: ""
-      locationName: SOURCE
-      metadata:
-        columns:
-          - acceptedValues:
-              strictMatch: true
-              values: []
-            appliedColumnTests: {}
-            columnReference:
-              columnCounter: a2df745d-9a58-4d28-8ef6-e7ffcb9a2e83
-              stepCounter: f821068d-2693-489e-a4b5-f15f660375eb
-            config: {}
-            dataType: VARIANT
-            defaultValue: ""
-            description: ""
-            name: V
-            nullable: true
-            primaryKey: false
-            uniqueKey: false
-          - acceptedValues:
-              strictMatch: true
-              values: []
-            appliedColumnTests: {}
-            columnReference:
-              columnCounter: b561e66e-af02-43a3-b92b-2ccebf0f6c15
-              stepCounter: f821068d-2693-489e-a4b5-f15f660375eb
-            config: {}
-            dataType: TIMESTAMP_NTZ(9)
-            defaultValue: ""
-            description: ""
-            name: T
-            nullable: true
-            primaryKey: false
-            uniqueKey: false
-        join:
-          joinCondition: FROM {{ ref('SOURCE', 'DAILY_14_TOTAL_SHORT') }}
-      name: DAILY_14_TOTAL_SHORT
-      schema: ""
-      sqlType: Source
-      table: DAILY_14_TOTAL_SHORT
-      type: sourceInput
-    stepCounter: f821068d-2693-489e-a4b5-f15f660375eb
+fileVersion: 1
+id: f821068d-2693-489e-a4b5-f15f660375eb
+name: DAILY_14_TOTAL_SHORT
+operation:
+  database: ""
+  dataset: ""
+  deployEnabled: true
+  description: ""
+  locationName: SOURCE
+  metadata:
+    columns:
+      - acceptedValues:
+          strictMatch: true
+          values: []
+        appliedColumnTests: {}
+        columnReference:
+          columnCounter: a2df745d-9a58-4d28-8ef6-e7ffcb9a2e83
+          stepCounter: f821068d-2693-489e-a4b5-f15f660375eb
+        config: {}
+        dataType: VARIANT
+        defaultValue: ""
+        description: ""
+        name: V
+        nullable: true
+        primaryKey: false
+        uniqueKey: false
+      - acceptedValues:
+          strictMatch: true
+          values: []
+        appliedColumnTests: {}
+        columnReference:
+          columnCounter: b561e66e-af02-43a3-b92b-2ccebf0f6c15
+          stepCounter: f821068d-2693-489e-a4b5-f15f660375eb
+        config: {}
+        dataType: TIMESTAMP_NTZ(9)
+        defaultValue: ""
+        description: ""
+        name: T
+        nullable: true
+        primaryKey: false
+        uniqueKey: false
+    join:
+      joinCondition: FROM {{ ref('SOURCE', 'DAILY_14_TOTAL_SHORT') }}
+  name: DAILY_14_TOTAL_SHORT
+  schema: ""
+  sqlType: Source
+  table: DAILY_14_TOTAL_SHORT
+  type: sourceInput
+  version: 1
+type: Node
