--- a/nodes/DESTINATION-STG_CUSTOMER.yml
+++ b/nodes/DESTINATION-STG_CUSTOMER.yml
@@ -1,133 +1,151 @@
-steps:
-  STG_CUSTOMER-30f9c2d4-7b13-4f3b-94cb-395e3f191b27:
-    operation:
-      config:
-        insertStrategy: INSERT
-        postSQL: ""
-        preSQL: ""
-        testsEnabled: true
-        truncateBefore: true
-      database: ""
-      deployEnabled: true
-      description: ""
-      isMultisource: false
-      locationName: DESTINATION
-      materializationType: table
-      metadata:
-        appliedNodeTests: []
-        columns:
-          - columnReference:
-              columnCounter: 3627cb18-5115-4094-85b2-0c0a23208691
-              stepCounter: 30f9c2d4-7b13-4f3b-94cb-395e3f191b27
-            dataType: NUMBER(38,0)
-            description: SF*150,000 are populated
-            name: C_CUSTKEY
-            nullable: false
-            sourceColumnReferences:
-              - columnReferences:
-                  - columnCounter: 77e2deef-0539-45cf-8060-779ade118d30
-                    stepCounter: 800099b8-3d0e-4ba8-98dc-7a1b22a82950
-                transform: ""
-          - columnReference:
-              columnCounter: dc9ce7e6-50d5-4fa4-9d00-aee60c61941c
-              stepCounter: 30f9c2d4-7b13-4f3b-94cb-395e3f191b27
-            dataType: VARCHAR(25)
-            description: ""
-            name: C_NAME
-            nullable: false
-            sourceColumnReferences:
-              - columnReferences:
-                  - columnCounter: b54d79d4-e5eb-436c-a273-591c967f6978
-                    stepCounter: 800099b8-3d0e-4ba8-98dc-7a1b22a82950
-                transform: ""
-          - columnReference:
-              columnCounter: 1de8b9f7-1e72-4eb2-968e-d98d835a3255
-              stepCounter: 30f9c2d4-7b13-4f3b-94cb-395e3f191b27
-            dataType: VARCHAR(40)
-            description: ""
-            name: C_ADDRESS
-            nullable: false
-            sourceColumnReferences:
-              - columnReferences:
-                  - columnCounter: a8cafdf3-0b49-45a3-bd1e-433b33d5dcd5
-                    stepCounter: 800099b8-3d0e-4ba8-98dc-7a1b22a82950
-                transform: ""
-          - columnReference:
-              columnCounter: 1d743e87-3eaa-4a71-b7cc-424016c56275
-              stepCounter: 30f9c2d4-7b13-4f3b-94cb-395e3f191b27
-            dataType: NUMBER(38,0)
-            description: Foreign Key to N_NATIONKEY
-            name: C_NATIONKEY
-            nullable: false
-            sourceColumnReferences:
-              - columnReferences:
-                  - columnCounter: 5c09a06b-58b5-4046-909d-8addc302d9d2
-                    stepCounter: 800099b8-3d0e-4ba8-98dc-7a1b22a82950
-                transform: ""
-          - columnReference:
-              columnCounter: 8300d4fe-2a9e-4e0a-b46d-28bb8af37ca9
-              stepCounter: 30f9c2d4-7b13-4f3b-94cb-395e3f191b27
-            dataType: VARCHAR(15)
-            description: ""
-            name: C_PHONE
-            nullable: false
-            sourceColumnReferences:
-              - columnReferences:
-                  - columnCounter: d93dc91c-2b40-44f7-9f36-fb7a2832be0d
-                    stepCounter: 800099b8-3d0e-4ba8-98dc-7a1b22a82950
-                transform: ""
-          - columnReference:
-              columnCounter: 35f41717-d5b0-4c24-aa3f-b29d66cec3f8
-              stepCounter: 30f9c2d4-7b13-4f3b-94cb-395e3f191b27
-            dataType: NUMBER(12,2)
-            description: ""
-            name: C_ACCTBAL
-            nullable: false
-            sourceColumnReferences:
-              - columnReferences:
-                  - columnCounter: dea8f8df-8872-49dd-972c-4e22c0349273
-                    stepCounter: 800099b8-3d0e-4ba8-98dc-7a1b22a82950
-                transform: ""
-          - columnReference:
-              columnCounter: 3494d60f-a2e3-4472-885e-866fe2d96e82
-              stepCounter: 30f9c2d4-7b13-4f3b-94cb-395e3f191b27
-            dataType: VARCHAR(10)
-            description: ""
-            name: C_MKTSEGMENT
-            nullable: true
-            sourceColumnReferences:
-              - columnReferences:
-                  - columnCounter: f47ebc3a-855f-4e45-a2bb-d27161ae3d92
-                    stepCounter: 800099b8-3d0e-4ba8-98dc-7a1b22a82950
-                transform: ""
-          - columnReference:
-              columnCounter: a43bffe8-b5e2-42ac-ae4c-b152ea639ff4
-              stepCounter: 30f9c2d4-7b13-4f3b-94cb-395e3f191b27
-            dataType: VARCHAR(117)
-            description: ""
-            name: C_COMMENT
-            nullable: true
-            sourceColumnReferences:
-              - columnReferences:
-                  - columnCounter: a3f64647-7182-46d1-8b40-01ec8f1f20ba
-                    stepCounter: 800099b8-3d0e-4ba8-98dc-7a1b22a82950
-                transform: ""
-        cteString: ""
-        enabledColumnTestIDs: []
-        sourceMapping:
-          - aliases: {}
-            customSQL:
-              customSQL: ""
-            dependencies:
-              - locationName: SOURCE
-                nodeName: CUSTOMER
-            join:
-              joinCondition: FROM {{ ref('SOURCE', 'CUSTOMER') }} "CUSTOMER"
-            name: STG_CUSTOMER
-            noLinkRefs: []
-      name: STG_CUSTOMER
-      overrideSQL: false
-      schema: ""
-      sqlType: Stage
-      type: sql
-    stepCounter: 30f9c2d4-7b13-4f3b-94cb-395e3f191b27
+fileVersion: 1
+id: 30f9c2d4-7b13-4f3b-94cb-395e3f191b27
+name: STG_CUSTOMER
+operation:
+  config:
+    insertStrategy: INSERT
+    postSQL: ""
+    preSQL: ""
+    testsEnabled: true
+    truncateBefore: true
+  database: ""
+  deployEnabled: true
+  description: ""
+  isMultisource: false
+  locationName: DESTINATION
+  materializationType: table
+  metadata:
+    appliedNodeTests: []
+    columns:
+      - appliedColumnTests: {}
+        columnReference:
+          columnCounter: 3627cb18-5115-4094-85b2-0c0a23208691
+          stepCounter: 30f9c2d4-7b13-4f3b-94cb-395e3f191b27
+        config: {}
+        dataType: NUMBER(38,0)
+        description: SF*150,000 are populated
+        name: C_CUSTKEY
+        nullable: false
+        sourceColumnReferences:
+          - columnReferences:
+              - columnCounter: 77e2deef-0539-45cf-8060-779ade118d30
+                stepCounter: 800099b8-3d0e-4ba8-98dc-7a1b22a82950
+            transform: ""
+      - appliedColumnTests: {}
+        columnReference:
+          columnCounter: dc9ce7e6-50d5-4fa4-9d00-aee60c61941c
+          stepCounter: 30f9c2d4-7b13-4f3b-94cb-395e3f191b27
+        config: {}
+        dataType: VARCHAR(25)
+        description: ""
+        name: C_NAME
+        nullable: false
+        sourceColumnReferences:
+          - columnReferences:
+              - columnCounter: b54d79d4-e5eb-436c-a273-591c967f6978
+                stepCounter: 800099b8-3d0e-4ba8-98dc-7a1b22a82950
+            transform: ""
+      - appliedColumnTests: {}
+        columnReference:
+          columnCounter: 1de8b9f7-1e72-4eb2-968e-d98d835a3255
+          stepCounter: 30f9c2d4-7b13-4f3b-94cb-395e3f191b27
+        config: {}
+        dataType: VARCHAR(40)
+        description: ""
+        name: C_ADDRESS
+        nullable: false
+        sourceColumnReferences:
+          - columnReferences:
+              - columnCounter: a8cafdf3-0b49-45a3-bd1e-433b33d5dcd5
+                stepCounter: 800099b8-3d0e-4ba8-98dc-7a1b22a82950
+            transform: ""
+      - appliedColumnTests: {}
+        columnReference:
+          columnCounter: 1d743e87-3eaa-4a71-b7cc-424016c56275
+          stepCounter: 30f9c2d4-7b13-4f3b-94cb-395e3f191b27
+        config: {}
+        dataType: NUMBER(38,0)
+        description: Foreign Key to N_NATIONKEY
+        name: C_NATIONKEY
+        nullable: false
+        sourceColumnReferences:
+          - columnReferences:
+              - columnCounter: 5c09a06b-58b5-4046-909d-8addc302d9d2
+                stepCounter: 800099b8-3d0e-4ba8-98dc-7a1b22a82950
+            transform: ""
+      - appliedColumnTests: {}
+        columnReference:
+          columnCounter: 8300d4fe-2a9e-4e0a-b46d-28bb8af37ca9
+          stepCounter: 30f9c2d4-7b13-4f3b-94cb-395e3f191b27
+        config: {}
+        dataType: VARCHAR(15)
+        description: ""
+        name: C_PHONE
+        nullable: false
+        sourceColumnReferences:
+          - columnReferences:
+              - columnCounter: d93dc91c-2b40-44f7-9f36-fb7a2832be0d
+                stepCounter: 800099b8-3d0e-4ba8-98dc-7a1b22a82950
+            transform: ""
+      - appliedColumnTests: {}
+        columnReference:
+          columnCounter: 35f41717-d5b0-4c24-aa3f-b29d66cec3f8
+          stepCounter: 30f9c2d4-7b13-4f3b-94cb-395e3f191b27
+        config: {}
+        dataType: NUMBER(12,2)
+        description: ""
+        name: C_ACCTBAL
+        nullable: false
+        sourceColumnReferences:
+          - columnReferences:
+              - columnCounter: dea8f8df-8872-49dd-972c-4e22c0349273
+                stepCounter: 800099b8-3d0e-4ba8-98dc-7a1b22a82950
+            transform: ""
+      - appliedColumnTests: {}
+        columnReference:
+          columnCounter: 3494d60f-a2e3-4472-885e-866fe2d96e82
+          stepCounter: 30f9c2d4-7b13-4f3b-94cb-395e3f191b27
+        config: {}
+        dataType: VARCHAR(10)
+        description: ""
+        name: C_MKTSEGMENT
+        nullable: true
+        sourceColumnReferences:
+          - columnReferences:
+              - columnCounter: f47ebc3a-855f-4e45-a2bb-d27161ae3d92
+                stepCounter: 800099b8-3d0e-4ba8-98dc-7a1b22a82950
+            transform: ""
+      - appliedColumnTests: {}
+        columnReference:
+          columnCounter: a43bffe8-b5e2-42ac-ae4c-b152ea639ff4
+          stepCounter: 30f9c2d4-7b13-4f3b-94cb-395e3f191b27
+        config: {}
+        dataType: VARCHAR(117)
+        description: ""
+        name: C_COMMENT
+        nullable: true
+        sourceColumnReferences:
+          - columnReferences:
+              - columnCounter: a3f64647-7182-46d1-8b40-01ec8f1f20ba
+                stepCounter: 800099b8-3d0e-4ba8-98dc-7a1b22a82950
+            transform: ""
+    cteString: ""
+    enabledColumnTestIDs: []
+    sourceMapping:
+      - aliases: {}
+        customSQL:
+          customSQL: ""
+        dependencies:
+          - locationName: SOURCE
+            nodeName: CUSTOMER
+        join:
+          joinCondition: FROM {{ ref('SOURCE', 'CUSTOMER') }} "CUSTOMER"
+        name: STG_CUSTOMER
+        noLinkRefs: []
+  name: STG_CUSTOMER
+  overrideSQL: false
+  schema: ""
+  sqlType: Stage
+  type: sql
+  version: 1
+type: Node
