--- a/nodes/DESTINATION-STG_ORDERS1.yml
+++ b/nodes/DESTINATION-STG_ORDERS1.yml
@@ -1,148 +1,168 @@
-steps:
-  STG_ORDERS1-f4c4da57-dcc4-405f-afbe-38c73b40f83d:
-    operation:
-      config:
-        insertStrategy: INSERT
-        postSQL: ""
-        preSQL: ""
-        testsEnabled: true
-        truncateBefore: true
-      database: ""
-      deployEnabled: true
-      description: |-
-        Orders are not present for all customers. In fact, one-third of the customers do not have any order in
-        the database. The orders are assigned at random to two-thirds of the customers (see Clause 4: ). The purpose of
-        this is to exercise the capabilities of the DBMS to handle "dead data" when joining two or more tables.
-      isMultisource: false
-      locationName: DESTINATION
-      materializationType: table
-      metadata:
-        appliedNodeTests: []
-        columns:
-          - columnReference:
-              columnCounter: 812d3a5a-7f8a-4b69-903d-745210d4e9a6
-              stepCounter: f4c4da57-dcc4-405f-afbe-38c73b40f83d
-            dataType: NUMBER(38,0)
-            description: SF*1,500,000 are sparsely populated
-            name: O_ORDERKEY
-            nullable: true
-            sourceColumnReferences:
-              - columnReferences:
-                  - columnCounter: 52c356a6-64c2-4feb-81c9-c5823c8c2f82
-                    stepCounter: fedbaae0-b7df-471d-984f-df487cb79301
-                transform: ""
-          - columnReference:
-              columnCounter: 5f1f07a4-2364-4e67-9e8d-c98da49d6563
-              stepCounter: f4c4da57-dcc4-405f-afbe-38c73b40f83d
-            dataType: NUMBER(38,0)
-            description: Foreign Key to C_CUSTKEY
-            name: O_CUSTKEY
-            nullable: true
-            sourceColumnReferences:
-              - columnReferences:
-                  - columnCounter: 7bcfcda8-403d-417f-bee9-192855787a5a
-                    stepCounter: fedbaae0-b7df-471d-984f-df487cb79301
-                transform: ""
-          - columnReference:
-              columnCounter: 7563f04e-f9fc-4f91-be19-021eca34999f
-              stepCounter: f4c4da57-dcc4-405f-afbe-38c73b40f83d
-            dataType: VARCHAR(1)
-            description: ""
-            name: O_ORDERSTATUS
-            nullable: false
-            sourceColumnReferences:
-              - columnReferences:
-                  - columnCounter: bb2b7c53-5952-4020-af08-df5f656a53d6
-                    stepCounter: fedbaae0-b7df-471d-984f-df487cb79301
-                transform: ""
-          - columnReference:
-              columnCounter: 802fca46-14e8-48f9-be96-2bcf38e9e4a0
-              stepCounter: f4c4da57-dcc4-405f-afbe-38c73b40f83d
-            dataType: NUMBER(12,2)
-            description: ""
-            name: O_TOTALPRICE
-            nullable: false
-            sourceColumnReferences:
-              - columnReferences:
-                  - columnCounter: 43446969-2629-40cd-a172-40e464734134
-                    stepCounter: fedbaae0-b7df-471d-984f-df487cb79301
-                transform: ""
-          - columnReference:
-              columnCounter: 4a2736d0-3d0e-490f-9716-17df158dbfe0
-              stepCounter: f4c4da57-dcc4-405f-afbe-38c73b40f83d
-            dataType: DATE
-            description: ""
-            name: O_ORDERDATE
-            nullable: false
-            sourceColumnReferences:
-              - columnReferences:
-                  - columnCounter: 8cd1087c-acf4-458a-9c10-266809a0528e
-                    stepCounter: fedbaae0-b7df-471d-984f-df487cb79301
-                transform: ""
-          - columnReference:
-              columnCounter: 59693d17-6ed3-4acd-bde0-bfbd1bf5b98a
-              stepCounter: f4c4da57-dcc4-405f-afbe-38c73b40f83d
-            dataType: VARCHAR(15)
-            description: ""
-            name: O_ORDERPRIORITY
-            nullable: false
-            sourceColumnReferences:
-              - columnReferences:
-                  - columnCounter: 1305ae7f-59ba-4d1f-a7e2-84b1e4554904
-                    stepCounter: fedbaae0-b7df-471d-984f-df487cb79301
-                transform: ""
-          - columnReference:
-              columnCounter: d1599dfb-4945-4ea9-9762-a7dea5ebe259
-              stepCounter: f4c4da57-dcc4-405f-afbe-38c73b40f83d
-            dataType: VARCHAR(15)
-            description: ""
-            name: O_CLERK
-            nullable: false
-            sourceColumnReferences:
-              - columnReferences:
-                  - columnCounter: 8bf7d951-9374-4e58-b838-a87a9723cf05
-                    stepCounter: fedbaae0-b7df-471d-984f-df487cb79301
-                transform: ""
-          - columnReference:
-              columnCounter: 77fd5b4b-790d-4acf-9207-9d3769ee01e7
-              stepCounter: f4c4da57-dcc4-405f-afbe-38c73b40f83d
-            dataType: NUMBER(38,0)
-            description: ""
-            name: O_SHIPPRIORITY
-            nullable: false
-            sourceColumnReferences:
-              - columnReferences:
-                  - columnCounter: ff7e1ef6-d90f-4d9b-8cc4-bcc0ffaa3de4
-                    stepCounter: fedbaae0-b7df-471d-984f-df487cb79301
-                transform: ""
-          - columnReference:
-              columnCounter: 9c55d8b0-a253-437d-9644-d379eb67bd1c
-              stepCounter: f4c4da57-dcc4-405f-afbe-38c73b40f83d
-            dataType: VARCHAR(79)
-            description: ""
-            name: O_COMMENT
-            nullable: false
-            sourceColumnReferences:
-              - columnReferences:
-                  - columnCounter: fdde3b73-1cf1-4934-8995-9eb9ba80cd85
-                    stepCounter: fedbaae0-b7df-471d-984f-df487cb79301
-                transform: ""
-        cteString: ""
-        enabledColumnTestIDs: []
-        sourceMapping:
-          - aliases: {}
-            customSQL:
-              customSQL: ""
-            dependencies:
-              - locationName: SOURCE
-                nodeName: ORDERS
-            join:
-              joinCondition: FROM {{ ref('SOURCE', 'ORDERS') }} "ORDERS"
-            name: STG_ORDERS1
-            noLinkRefs: []
-      name: STG_ORDERS1
-      overrideSQL: false
-      schema: ""
-      sqlType: Stage
-      type: sql
-    stepCounter: f4c4da57-dcc4-405f-afbe-38c73b40f83d
+fileVersion: 1
+id: f4c4da57-dcc4-405f-afbe-38c73b40f83d
+name: STG_ORDERS1
+operation:
+  config:
+    insertStrategy: INSERT
+    postSQL: ""
+    preSQL: ""
+    testsEnabled: true
+    truncateBefore: true
+  database: ""
+  deployEnabled: true
+  description: |-
+    Orders are not present for all customers. In fact, one-third of the customers do not have any order in
+    the database. The orders are assigned at random to two-thirds of the customers (see Clause 4: ). The purpose of
+    this is to exercise the capabilities of the DBMS to handle "dead data" when joining two or more tables.
+  isMultisource: false
+  locationName: DESTINATION
+  materializationType: table
+  metadata:
+    appliedNodeTests: []
+    columns:
+      - appliedColumnTests: {}
+        columnReference:
+          columnCounter: 812d3a5a-7f8a-4b69-903d-745210d4e9a6
+          stepCounter: f4c4da57-dcc4-405f-afbe-38c73b40f83d
+        config: {}
+        dataType: NUMBER(38,0)
+        description: SF*1,500,000 are sparsely populated
+        name: O_ORDERKEY
+        nullable: true
+        sourceColumnReferences:
+          - columnReferences:
+              - columnCounter: 52c356a6-64c2-4feb-81c9-c5823c8c2f82
+                stepCounter: fedbaae0-b7df-471d-984f-df487cb79301
+            transform: ""
+      - appliedColumnTests: {}
+        columnReference:
+          columnCounter: 5f1f07a4-2364-4e67-9e8d-c98da49d6563
+          stepCounter: f4c4da57-dcc4-405f-afbe-38c73b40f83d
+        config: {}
+        dataType: NUMBER(38,0)
+        description: Foreign Key to C_CUSTKEY
+        name: O_CUSTKEY
+        nullable: true
+        sourceColumnReferences:
+          - columnReferences:
+              - columnCounter: 7bcfcda8-403d-417f-bee9-192855787a5a
+                stepCounter: fedbaae0-b7df-471d-984f-df487cb79301
+            transform: ""
+      - appliedColumnTests: {}
+        columnReference:
+          columnCounter: 7563f04e-f9fc-4f91-be19-021eca34999f
+          stepCounter: f4c4da57-dcc4-405f-afbe-38c73b40f83d
+        config: {}
+        dataType: VARCHAR(1)
+        description: ""
+        name: O_ORDERSTATUS
+        nullable: false
+        sourceColumnReferences:
+          - columnReferences:
+              - columnCounter: bb2b7c53-5952-4020-af08-df5f656a53d6
+                stepCounter: fedbaae0-b7df-471d-984f-df487cb79301
+            transform: ""
+      - appliedColumnTests: {}
+        columnReference:
+          columnCounter: 802fca46-14e8-48f9-be96-2bcf38e9e4a0
+          stepCounter: f4c4da57-dcc4-405f-afbe-38c73b40f83d
+        config: {}
+        dataType: NUMBER(12,2)
+        description: ""
+        name: O_TOTALPRICE
+        nullable: false
+        sourceColumnReferences:
+          - columnReferences:
+              - columnCounter: 43446969-2629-40cd-a172-40e464734134
+                stepCounter: fedbaae0-b7df-471d-984f-df487cb79301
+            transform: ""
+      - appliedColumnTests: {}
+        columnReference:
+          columnCounter: 4a2736d0-3d0e-490f-9716-17df158dbfe0
+          stepCounter: f4c4da57-dcc4-405f-afbe-38c73b40f83d
+        config: {}
+        dataType: DATE
+        description: ""
+        name: O_ORDERDATE
+        nullable: false
+        sourceColumnReferences:
+          - columnReferences:
+              - columnCounter: 8cd1087c-acf4-458a-9c10-266809a0528e
+                stepCounter: fedbaae0-b7df-471d-984f-df487cb79301
+            transform: ""
+      - appliedColumnTests: {}
+        columnReference:
+          columnCounter: 59693d17-6ed3-4acd-bde0-bfbd1bf5b98a
+          stepCounter: f4c4da57-dcc4-405f-afbe-38c73b40f83d
+        config: {}
+        dataType: VARCHAR(15)
+        description: ""
+        name: O_ORDERPRIORITY
+        nullable: false
+        sourceColumnReferences:
+          - columnReferences:
+              - columnCounter: 1305ae7f-59ba-4d1f-a7e2-84b1e4554904
+                stepCounter: fedbaae0-b7df-471d-984f-df487cb79301
+            transform: ""
+      - appliedColumnTests: {}
+        columnReference:
+          columnCounter: d1599dfb-4945-4ea9-9762-a7dea5ebe259
+          stepCounter: f4c4da57-dcc4-405f-afbe-38c73b40f83d
+        config: {}
+        dataType: VARCHAR(15)
+        description: ""
+        name: O_CLERK
+        nullable: false
+        sourceColumnReferences:
+          - columnReferences:
+              - columnCounter: 8bf7d951-9374-4e58-b838-a87a9723cf05
+                stepCounter: fedbaae0-b7df-471d-984f-df487cb79301
+            transform: ""
+      - appliedColumnTests: {}
+        columnReference:
+          columnCounter: 77fd5b4b-790d-4acf-9207-9d3769ee01e7
+          stepCounter: f4c4da57-dcc4-405f-afbe-38c73b40f83d
+        config: {}
+        dataType: NUMBER(38,0)
+        description: ""
+        name: O_SHIPPRIORITY
+        nullable: false
+        sourceColumnReferences:
+          - columnReferences:
+              - columnCounter: ff7e1ef6-d90f-4d9b-8cc4-bcc0ffaa3de4
+                stepCounter: fedbaae0-b7df-471d-984f-df487cb79301
+            transform: ""
+      - appliedColumnTests: {}
+        columnReference:
+          columnCounter: 9c55d8b0-a253-437d-9644-d379eb67bd1c
+          stepCounter: f4c4da57-dcc4-405f-afbe-38c73b40f83d
+        config: {}
+        dataType: VARCHAR(79)
+        description: ""
+        name: O_COMMENT
+        nullable: false
+        sourceColumnReferences:
+          - columnReferences:
+              - columnCounter: fdde3b73-1cf1-4934-8995-9eb9ba80cd85
+                stepCounter: fedbaae0-b7df-471d-984f-df487cb79301
+            transform: ""
+    cteString: ""
+    enabledColumnTestIDs: []
+    sourceMapping:
+      - aliases: {}
+        customSQL:
+          customSQL: ""
+        dependencies:
+          - locationName: SOURCE
+            nodeName: ORDERS
+        join:
+          joinCondition: FROM {{ ref('SOURCE', 'ORDERS') }} "ORDERS"
+        name: STG_ORDERS1
+        noLinkRefs: []
+  name: STG_ORDERS1
+  overrideSQL: false
+  schema: ""
+  sqlType: Stage
+  type: sql
+  version: 1
+type: Node
