--- a/nodes/DESTINATION-STG_PARTSUPP.yml
+++ b/nodes/DESTINATION-STG_PARTSUPP.yml
@@ -1,97 +1,109 @@
-steps:
-  STG_PARTSUPP-60ec12f1-5d7f-4eb9-ad6e-96a9b7c6586e:
-    operation:
-      config:
-        insertStrategy: INSERT
-        postSQL: ""
-        preSQL: ""
-        testsEnabled: true
-        truncateBefore: true
-      database: ""
-      deployEnabled: true
-      description: ""
-      isMultisource: false
-      locationName: DESTINATION
-      materializationType: table
-      metadata:
-        appliedNodeTests: []
-        columns:
-          - columnReference:
-              columnCounter: 7b160fb4-0137-4ca1-8a5f-96e5153c1c44
-              stepCounter: 60ec12f1-5d7f-4eb9-ad6e-96a9b7c6586e
-            dataType: NUMBER(38,0)
-            description: Foreign Key to P_PARTKEY
-            name: PS_PARTKEY
-            nullable: false
-            sourceColumnReferences:
-              - columnReferences:
-                  - columnCounter: 1fb85c3c-1bee-4ce0-86ca-3cb610cea98a
-                    stepCounter: bc82a49a-2d77-4d73-9450-4b16398cccb8
-                transform: ""
-          - columnReference:
-              columnCounter: 527d20a1-5f60-4e22-bd2e-d31dfba1ed59
-              stepCounter: 60ec12f1-5d7f-4eb9-ad6e-96a9b7c6586e
-            dataType: NUMBER(38,0)
-            description: Foreign Key to S_SUPPKEY
-            name: PS_SUPPKEY
-            nullable: false
-            sourceColumnReferences:
-              - columnReferences:
-                  - columnCounter: bee0102e-cc6c-4199-ac49-ab3b2cb3f52c
-                    stepCounter: bc82a49a-2d77-4d73-9450-4b16398cccb8
-                transform: ""
-          - columnReference:
-              columnCounter: 1ee3feaa-c029-43ad-9d57-0a27535964cb
-              stepCounter: 60ec12f1-5d7f-4eb9-ad6e-96a9b7c6586e
-            dataType: NUMBER(38,0)
-            description: ""
-            name: PS_AVAILQTY
-            nullable: false
-            sourceColumnReferences:
-              - columnReferences:
-                  - columnCounter: 5c18470e-84d6-42db-b1d4-5ae8d37e1fe2
-                    stepCounter: bc82a49a-2d77-4d73-9450-4b16398cccb8
-                transform: ""
-          - columnReference:
-              columnCounter: 7d9bdf4d-04b9-412e-bd8e-d18d39cc24e4
-              stepCounter: 60ec12f1-5d7f-4eb9-ad6e-96a9b7c6586e
-            dataType: NUMBER(12,2)
-            description: ""
-            name: PS_SUPPLYCOST
-            nullable: false
-            sourceColumnReferences:
-              - columnReferences:
-                  - columnCounter: 608cf33b-3f29-4e42-b3d5-3d4538fcf131
-                    stepCounter: bc82a49a-2d77-4d73-9450-4b16398cccb8
-                transform: ""
-          - columnReference:
-              columnCounter: a8b7960a-cba8-479a-8f8c-b15e16bcf71a
-              stepCounter: 60ec12f1-5d7f-4eb9-ad6e-96a9b7c6586e
-            dataType: VARCHAR(199)
-            description: ""
-            name: PS_COMMENT
-            nullable: true
-            sourceColumnReferences:
-              - columnReferences:
-                  - columnCounter: 594b4f60-e43b-4315-b906-67045467d429
-                    stepCounter: bc82a49a-2d77-4d73-9450-4b16398cccb8
-                transform: ""
-        cteString: ""
-        enabledColumnTestIDs: []
-        sourceMapping:
-          - aliases: {}
-            customSQL:
-              customSQL: ""
-            dependencies:
-              - locationName: SOURCE
-                nodeName: PARTSUPP
-            join:
-              joinCondition: FROM {{ ref('SOURCE', 'PARTSUPP') }} "PARTSUPP"
-            name: STG_PARTSUPP
-            noLinkRefs: []
-      name: STG_PARTSUPP
-      overrideSQL: false
-      schema: ""
-      sqlType: Stage
-      type: sql
-    stepCounter: 60ec12f1-5d7f-4eb9-ad6e-96a9b7c6586e
+fileVersion: 1
+id: 60ec12f1-5d7f-4eb9-ad6e-96a9b7c6586e
+name: STG_PARTSUPP
+operation:
+  config:
+    insertStrategy: INSERT
+    postSQL: ""
+    preSQL: ""
+    testsEnabled: true
+    truncateBefore: true
+  database: ""
+  deployEnabled: true
+  description: ""
+  isMultisource: false
+  locationName: DESTINATION
+  materializationType: table
+  metadata:
+    appliedNodeTests: []
+    columns:
+      - appliedColumnTests: {}
+        columnReference:
+          columnCounter: 7b160fb4-0137-4ca1-8a5f-96e5153c1c44
+          stepCounter: 60ec12f1-5d7f-4eb9-ad6e-96a9b7c6586e
+        config: {}
+        dataType: NUMBER(38,0)
+        description: Foreign Key to P_PARTKEY
+        name: PS_PARTKEY
+        nullable: false
+        sourceColumnReferences:
+          - columnReferences:
+              - columnCounter: 1fb85c3c-1bee-4ce0-86ca-3cb610cea98a
+                stepCounter: bc82a49a-2d77-4d73-9450-4b16398cccb8
+            transform: ""
+      - appliedColumnTests: {}
+        columnReference:
+          columnCounter: 527d20a1-5f60-4e22-bd2e-d31dfba1ed59
+          stepCounter: 60ec12f1-5d7f-4eb9-ad6e-96a9b7c6586e
+        config: {}
+        dataType: NUMBER(38,0)
+        description: Foreign Key to S_SUPPKEY
+        name: PS_SUPPKEY
+        nullable: false
+        sourceColumnReferences:
+          - columnReferences:
+              - columnCounter: bee0102e-cc6c-4199-ac49-ab3b2cb3f52c
+                stepCounter: bc82a49a-2d77-4d73-9450-4b16398cccb8
+            transform: ""
+      - appliedColumnTests: {}
+        columnReference:
+          columnCounter: 1ee3feaa-c029-43ad-9d57-0a27535964cb
+          stepCounter: 60ec12f1-5d7f-4eb9-ad6e-96a9b7c6586e
+        config: {}
+        dataType: NUMBER(38,0)
+        description: ""
+        name: PS_AVAILQTY
+        nullable: false
+        sourceColumnReferences:
+          - columnReferences:
+              - columnCounter: 5c18470e-84d6-42db-b1d4-5ae8d37e1fe2
+                stepCounter: bc82a49a-2d77-4d73-9450-4b16398cccb8
+            transform: ""
+      - appliedColumnTests: {}
+        columnReference:
+          columnCounter: 7d9bdf4d-04b9-412e-bd8e-d18d39cc24e4
+          stepCounter: 60ec12f1-5d7f-4eb9-ad6e-96a9b7c6586e
+        config: {}
+        dataType: NUMBER(12,2)
+        description: ""
+        name: PS_SUPPLYCOST
+        nullable: false
+        sourceColumnReferences:
+          - columnReferences:
+              - columnCounter: 608cf33b-3f29-4e42-b3d5-3d4538fcf131
+                stepCounter: bc82a49a-2d77-4d73-9450-4b16398cccb8
+            transform: ""
+      - appliedColumnTests: {}
+        columnReference:
+          columnCounter: a8b7960a-cba8-479a-8f8c-b15e16bcf71a
+          stepCounter: 60ec12f1-5d7f-4eb9-ad6e-96a9b7c6586e
+        config: {}
+        dataType: VARCHAR(199)
+        description: ""
+        name: PS_COMMENT
+        nullable: true
+        sourceColumnReferences:
+          - columnReferences:
+              - columnCounter: 594b4f60-e43b-4315-b906-67045467d429
+                stepCounter: bc82a49a-2d77-4d73-9450-4b16398cccb8
+            transform: ""
+    cteString: ""
+    enabledColumnTestIDs: []
+    sourceMapping:
+      - aliases: {}
+        customSQL:
+          customSQL: ""
+        dependencies:
+          - locationName: SOURCE
+            nodeName: PARTSUPP
+        join:
+          joinCondition: FROM {{ ref('SOURCE', 'PARTSUPP') }} "PARTSUPP"
+        name: STG_PARTSUPP
+        noLinkRefs: []
+  name: STG_PARTSUPP
+  overrideSQL: false
+  schema: ""
+  sqlType: Stage
+  type: sql
+  version: 1
+type: Node
