--- a/nodes/DESTINATION-STG_PARTSUPP1.yml
+++ b/nodes/DESTINATION-STG_PARTSUPP1.yml
@@ -1,97 +1,109 @@
-steps:
-  STG_PARTSUPP1-4653ce30-62a0-4475-a696-1f25e3064886:
-    operation:
-      config:
-        insertStrategy: INSERT
-        postSQL: ""
-        preSQL: ""
-        testsEnabled: true
-        truncateBefore: true
-      database: ""
-      deployEnabled: true
-      description: ""
-      isMultisource: false
-      locationName: DESTINATION
-      materializationType: table
-      metadata:
-        appliedNodeTests: []
-        columns:
-          - columnReference:
-              columnCounter: b7715a29-46a0-47fb-9157-45b28e7dfa59
-              stepCounter: 4653ce30-62a0-4475-a696-1f25e3064886
-            dataType: NUMBER(38,0)
-            description: Foreign Key to P_PARTKEY
-            name: PS_PARTKEY
-            nullable: false
-            sourceColumnReferences:
-              - columnReferences:
-                  - columnCounter: 1fb85c3c-1bee-4ce0-86ca-3cb610cea98a
-                    stepCounter: bc82a49a-2d77-4d73-9450-4b16398cccb8
-                transform: ""
-          - columnReference:
-              columnCounter: a3788ce5-16db-4aeb-8887-027994800bd0
-              stepCounter: 4653ce30-62a0-4475-a696-1f25e3064886
-            dataType: NUMBER(38,0)
-            description: Foreign Key to S_SUPPKEY
-            name: PS_SUPPKEY
-            nullable: false
-            sourceColumnReferences:
-              - columnReferences:
-                  - columnCounter: bee0102e-cc6c-4199-ac49-ab3b2cb3f52c
-                    stepCounter: bc82a49a-2d77-4d73-9450-4b16398cccb8
-                transform: ""
-          - columnReference:
-              columnCounter: 64e59ccd-5a02-4ed9-b806-ee7302e11180
-              stepCounter: 4653ce30-62a0-4475-a696-1f25e3064886
-            dataType: NUMBER(38,0)
-            description: ""
-            name: PS_AVAILQTY
-            nullable: false
-            sourceColumnReferences:
-              - columnReferences:
-                  - columnCounter: 5c18470e-84d6-42db-b1d4-5ae8d37e1fe2
-                    stepCounter: bc82a49a-2d77-4d73-9450-4b16398cccb8
-                transform: ""
-          - columnReference:
-              columnCounter: 400db795-f088-4f5b-ae30-db287b92b283
-              stepCounter: 4653ce30-62a0-4475-a696-1f25e3064886
-            dataType: NUMBER(12,2)
-            description: ""
-            name: PS_SUPPLYCOST
-            nullable: false
-            sourceColumnReferences:
-              - columnReferences:
-                  - columnCounter: 608cf33b-3f29-4e42-b3d5-3d4538fcf131
-                    stepCounter: bc82a49a-2d77-4d73-9450-4b16398cccb8
-                transform: ""
-          - columnReference:
-              columnCounter: 9b528158-cbbe-4a3a-9ef3-01907892189d
-              stepCounter: 4653ce30-62a0-4475-a696-1f25e3064886
-            dataType: VARCHAR(199)
-            description: ""
-            name: PS_COMMENT
-            nullable: true
-            sourceColumnReferences:
-              - columnReferences:
-                  - columnCounter: 594b4f60-e43b-4315-b906-67045467d429
-                    stepCounter: bc82a49a-2d77-4d73-9450-4b16398cccb8
-                transform: ""
-        cteString: ""
-        enabledColumnTestIDs: []
-        sourceMapping:
-          - aliases: {}
-            customSQL:
-              customSQL: ""
-            dependencies:
-              - locationName: SOURCE
-                nodeName: PARTSUPP
-            join:
-              joinCondition: FROM {{ ref('SOURCE', 'PARTSUPP') }} "PARTSUPP"
-            name: STG_PARTSUPP1
-            noLinkRefs: []
-      name: STG_PARTSUPP1
-      overrideSQL: false
-      schema: ""
-      sqlType: Stage
-      type: sql
-    stepCounter: 4653ce30-62a0-4475-a696-1f25e3064886
+fileVersion: 1
+id: 4653ce30-62a0-4475-a696-1f25e3064886
+name: STG_PARTSUPP1
+operation:
+  config:
+    insertStrategy: INSERT
+    postSQL: ""
+    preSQL: ""
+    testsEnabled: true
+    truncateBefore: true
+  database: ""
+  deployEnabled: true
+  description: ""
+  isMultisource: false
+  locationName: DESTINATION
+  materializationType: table
+  metadata:
+    appliedNodeTests: []
+    columns:
+      - appliedColumnTests: {}
+        columnReference:
+          columnCounter: b7715a29-46a0-47fb-9157-45b28e7dfa59
+          stepCounter: 4653ce30-62a0-4475-a696-1f25e3064886
+        config: {}
+        dataType: NUMBER(38,0)
+        description: Foreign Key to P_PARTKEY
+        name: PS_PARTKEY
+        nullable: false
+        sourceColumnReferences:
+          - columnReferences:
+              - columnCounter: 1fb85c3c-1bee-4ce0-86ca-3cb610cea98a
+                stepCounter: bc82a49a-2d77-4d73-9450-4b16398cccb8
+            transform: ""
+      - appliedColumnTests: {}
+        columnReference:
+          columnCounter: a3788ce5-16db-4aeb-8887-027994800bd0
+          stepCounter: 4653ce30-62a0-4475-a696-1f25e3064886
+        config: {}
+        dataType: NUMBER(38,0)
+        description: Foreign Key to S_SUPPKEY
+        name: PS_SUPPKEY
+        nullable: false
+        sourceColumnReferences:
+          - columnReferences:
+              - columnCounter: bee0102e-cc6c-4199-ac49-ab3b2cb3f52c
+                stepCounter: bc82a49a-2d77-4d73-9450-4b16398cccb8
+            transform: ""
+      - appliedColumnTests: {}
+        columnReference:
+          columnCounter: 64e59ccd-5a02-4ed9-b806-ee7302e11180
+          stepCounter: 4653ce30-62a0-4475-a696-1f25e3064886
+        config: {}
+        dataType: NUMBER(38,0)
+        description: ""
+        name: PS_AVAILQTY
+        nullable: false
+        sourceColumnReferences:
+          - columnReferences:
+              - columnCounter: 5c18470e-84d6-42db-b1d4-5ae8d37e1fe2
+                stepCounter: bc82a49a-2d77-4d73-9450-4b16398cccb8
+            transform: ""
+      - appliedColumnTests: {}
+        columnReference:
+          columnCounter: 400db795-f088-4f5b-ae30-db287b92b283
+          stepCounter: 4653ce30-62a0-4475-a696-1f25e3064886
+        config: {}
+        dataType: NUMBER(12,2)
+        description: ""
+        name: PS_SUPPLYCOST
+        nullable: false
+        sourceColumnReferences:
+          - columnReferences:
+              - columnCounter: 608cf33b-3f29-4e42-b3d5-3d4538fcf131
+                stepCounter: bc82a49a-2d77-4d73-9450-4b16398cccb8
+            transform: ""
+      - appliedColumnTests: {}
+        columnReference:
+          columnCounter: 9b528158-cbbe-4a3a-9ef3-01907892189d
+          stepCounter: 4653ce30-62a0-4475-a696-1f25e3064886
+        config: {}
+        dataType: VARCHAR(199)
+        description: ""
+        name: PS_COMMENT
+        nullable: true
+        sourceColumnReferences:
+          - columnReferences:
+              - columnCounter: 594b4f60-e43b-4315-b906-67045467d429
+                stepCounter: bc82a49a-2d77-4d73-9450-4b16398cccb8
+            transform: ""
+    cteString: ""
+    enabledColumnTestIDs: []
+    sourceMapping:
+      - aliases: {}
+        customSQL:
+          customSQL: ""
+        dependencies:
+          - locationName: SOURCE
+            nodeName: PARTSUPP
+        join:
+          joinCondition: FROM {{ ref('SOURCE', 'PARTSUPP') }} "PARTSUPP"
+        name: STG_PARTSUPP1
+        noLinkRefs: []
+  name: STG_PARTSUPP1
+  overrideSQL: false
+  schema: ""
+  sqlType: Stage
+  type: sql
+  version: 1
+type: Node
