--- a/nodes/DESTINATION-STG_REGION1.yml
+++ b/nodes/DESTINATION-STG_REGION1.yml
@@ -1,73 +1,81 @@
-steps:
-  STG_REGION1-7a0937d8-c27e-4792-a5b0-d25d6ce10b33:
-    operation:
-      config:
-        insertStrategy: INSERT
-        postSQL: ""
-        preSQL: ""
-        testsEnabled: true
-        truncateBefore: true
-      database: ""
-      deployEnabled: true
-      description: ""
-      isMultisource: false
-      locationName: DESTINATION
-      materializationType: table
-      metadata:
-        appliedNodeTests: []
-        columns:
-          - columnReference:
-              columnCounter: 6118be8f-3a41-476e-9eef-5de62f5ebede
-              stepCounter: 7a0937d8-c27e-4792-a5b0-d25d6ce10b33
-            dataType: NUMBER(38,0)
-            description: ""
-            name: R_REGIONKEY
-            nullable: false
-            sourceColumnReferences:
-              - columnReferences:
-                  - columnCounter: 5b14cadf-1ad8-4921-9be1-5285a333130e
-                    stepCounter: feb00ab5-090c-4ec7-bf5d-4c49e53db03f
-                transform: ""
-          - columnReference:
-              columnCounter: 6608d66b-db82-495a-b16d-c521e2031ccb
-              stepCounter: 7a0937d8-c27e-4792-a5b0-d25d6ce10b33
-            dataType: VARCHAR(25)
-            description: ""
-            name: R_NAME
-            nullable: false
-            sourceColumnReferences:
-              - columnReferences:
-                  - columnCounter: 2da44489-23cd-4acf-b5e1-0d29f6836bc0
-                    stepCounter: feb00ab5-090c-4ec7-bf5d-4c49e53db03f
-                transform: ""
-          - columnReference:
-              columnCounter: ef18cb05-f20f-4345-8d8f-76b3254073bf
-              stepCounter: 7a0937d8-c27e-4792-a5b0-d25d6ce10b33
-            dataType: VARCHAR(152)
-            description: ""
-            name: R_COMMENT
-            nullable: true
-            sourceColumnReferences:
-              - columnReferences:
-                  - columnCounter: 3c2f7c1c-a023-498c-86bc-b37453a3b96f
-                    stepCounter: feb00ab5-090c-4ec7-bf5d-4c49e53db03f
-                transform: ""
-        cteString: ""
-        enabledColumnTestIDs: []
-        sourceMapping:
-          - aliases: {}
-            customSQL:
-              customSQL: ""
-            dependencies:
-              - locationName: SOURCE
-                nodeName: REGION
-            join:
-              joinCondition: FROM {{ ref('SOURCE', 'REGION') }} "REGION"
-            name: STG_REGION1
-            noLinkRefs: []
-      name: STG_REGION1
-      overrideSQL: false
-      schema: ""
-      sqlType: Stage
-      type: sql
-    stepCounter: 7a0937d8-c27e-4792-a5b0-d25d6ce10b33
+fileVersion: 1
+id: 7a0937d8-c27e-4792-a5b0-d25d6ce10b33
+name: STG_REGION1
+operation:
+  config:
+    insertStrategy: INSERT
+    postSQL: ""
+    preSQL: ""
+    testsEnabled: true
+    truncateBefore: true
+  database: ""
+  deployEnabled: true
+  description: ""
+  isMultisource: false
+  locationName: DESTINATION
+  materializationType: table
+  metadata:
+    appliedNodeTests: []
+    columns:
+      - appliedColumnTests: {}
+        columnReference:
+          columnCounter: 6118be8f-3a41-476e-9eef-5de62f5ebede
+          stepCounter: 7a0937d8-c27e-4792-a5b0-d25d6ce10b33
+        config: {}
+        dataType: NUMBER(38,0)
+        description: ""
+        name: R_REGIONKEY
+        nullable: false
+        sourceColumnReferences:
+          - columnReferences:
+              - columnCounter: 5b14cadf-1ad8-4921-9be1-5285a333130e
+                stepCounter: feb00ab5-090c-4ec7-bf5d-4c49e53db03f
+            transform: ""
+      - appliedColumnTests: {}
+        columnReference:
+          columnCounter: 6608d66b-db82-495a-b16d-c521e2031ccb
+          stepCounter: 7a0937d8-c27e-4792-a5b0-d25d6ce10b33
+        config: {}
+        dataType: VARCHAR(25)
+        description: ""
+        name: R_NAME
+        nullable: false
+        sourceColumnReferences:
+          - columnReferences:
+              - columnCounter: 2da44489-23cd-4acf-b5e1-0d29f6836bc0
+                stepCounter: feb00ab5-090c-4ec7-bf5d-4c49e53db03f
+            transform: ""
+      - appliedColumnTests: {}
+        columnReference:
+          columnCounter: ef18cb05-f20f-4345-8d8f-76b3254073bf
+          stepCounter: 7a0937d8-c27e-4792-a5b0-d25d6ce10b33
+        config: {}
+        dataType: VARCHAR(152)
+        description: ""
+        name: R_COMMENT
+        nullable: true
+        sourceColumnReferences:
+          - columnReferences:
+              - columnCounter: 3c2f7c1c-a023-498c-86bc-b37453a3b96f
+                stepCounter: feb00ab5-090c-4ec7-bf5d-4c49e53db03f
+            transform: ""
+    cteString: ""
+    enabledColumnTestIDs: []
+    sourceMapping:
+      - aliases: {}
+        customSQL:
+          customSQL: ""
+        dependencies:
+          - locationName: SOURCE
+            nodeName: REGION
+        join:
+          joinCondition: FROM {{ ref('SOURCE', 'REGION') }} "REGION"
+        name: STG_REGION1
+        noLinkRefs: []
+  name: STG_REGION1
+  overrideSQL: false
+  schema: ""
+  sqlType: Stage
+  type: sql
+  version: 1
+type: Node
